--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,33 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  height: 100vh;
+  width: 100vw;
+  font-family: "Helvetica, M PLUS 2", sans-serif;
+}
+
+/* @font-face {
+  font-family: "BentonSans Condensed Regular";
+  src: url(font/BentonSans_Condensed_Regular.otf);
+} */
+
+@keyframes test1 {
+  0% {
+    transform: rotate(0deg) translate(0%, 0%);
+  }
+  100% {
+    transform: translateY(200%) rotate(45deg);
+  }
+}
+
+@keyframes test2 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: translateY(-200%) rotate(-45deg);
+  }
 }
