--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@ body {
   height: 100vh;
   width: 100vw;
   font-family: "Helvetica, M PLUS 2", sans-serif;
+  font-size: 16px;
 }
 
 /* @font-face {
