--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,3 +53,14 @@ body {
     opacity: 1;
   }
 }
+
+@keyframes ApparitionImage {
+  0% {
+    opacity: 1;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
