--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   height: 100vh;
   width: 100vw;
@@ -55,13 +59,11 @@ body {
   }
 }
 
-@keyframes ApparitionImage {
-  0% {
+@keyframes skeleton {
+  from {
     opacity: 1;
-    transform: translateY(30px);
   }
-  100% {
-    opacity: 1;
-    transform: translateY(0px);
+  to {
+    opacity: 0.6;
   }
 }
