--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,16 +1,17 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 ::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
-  max-width: 100vw;
-  font-family: "Helvetica, M PLUS 2", sans-serif;
-  font-size: 16px;
+    height: 100vh;
+    width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
+    font-family: "Helvetica, M PLUS 2", sans-serif;
+    font-size: 16px;
 }
